--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dating Cleaning and Merging\n",
+    "# Anita Sun"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -1278,6 +1288,93 @@
    "source": [
     "df_illinois_merged.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_illinois_merged.to_csv('merged_data_illinois.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ny_gdf = gpd.read_file('new_york_shapefiles/tl_2023_36_tract.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ny_joined_df = gpd.sjoin(ny_gdf.to_crs(crs='EPSG:26916'), pol_gdf.to_crs(crs='EPSG:26916'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ny_joined_df = ny_joined_df[['GEOIDFQ','name', 'age', 'gender', 'race',\n",
+    "       'date', 'street_address', 'city', 'state', 'zip', 'county',\n",
+    "       'agency_responsible', 'ori', 'cause_of_death', 'circumstances',\n",
+    "       'disposition_official', 'officer_charged', 'news_urls',\n",
+    "       'signs_of_mental_illness', 'allegedly_armed', 'wapo_armed',\n",
+    "       'wapo_threat_level', 'wapo_flee', 'geography', 'encounter_type',\n",
+    "       'initial_reason', 'call_for_service', 'tract',\n",
+    "       'hhincome_median_census_tract', 'latitude', 'longitude',\n",
+    "       'pop_total_census_tract', 'pop_white_census_tract',\n",
+    "       'pop_black_census_tract', 'pop_native_american_census_tract',\n",
+    "       'pop_asian_census_tract', 'pop_pacific_islander_census_tract',\n",
+    "       'pop_other_multiple_census_tract', 'pop_hispanic_census_tract',\n",
+    "       'lat_long', 'month', 'day', 'year']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ny_joined_df.rename(columns={'GEOIDFQ': 'GEO_ID'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['GEO_ID', 'name', 'age', 'gender', 'race', 'date', 'street_address',\n",
+       "       'city', 'state', 'zip', 'county', 'agency_responsible', 'ori',\n",
+       "       'cause_of_death', 'circumstances', 'disposition_official',\n",
+       "       'officer_charged', 'news_urls', 'signs_of_mental_illness',\n",
+       "       'allegedly_armed', 'wapo_armed', 'wapo_threat_level', 'wapo_flee',\n",
+       "       'geography', 'encounter_type', 'initial_reason', 'call_for_service',\n",
+       "       'tract', 'hhincome_median_census_tract', 'latitude', 'longitude',\n",
+       "       'pop_total_census_tract', 'pop_white_census_tract',\n",
+       "       'pop_black_census_tract', 'pop_native_american_census_tract',\n",
+       "       'pop_asian_census_tract', 'pop_pacific_islander_census_tract',\n",
+       "       'pop_other_multiple_census_tract', 'pop_hispanic_census_tract',\n",
+       "       'lat_long', 'month', 'day', 'year'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
